[package]
name = "aftermath-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for NVIDIA Aftermath, targeting Vulkan applications"
license = "MIT"
repository = "https://github.com/dust-engine/aftermath-rs"
keywords = ["vulkan", "nvidia", "aftermath", "gpu", "ffi"]

[build-dependencies]
sysreq = "0"
